layout bug, font, and color

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2095,6 +2095,7 @@ body.pages.index, body.pages.search{
       font-size: 13px;
       padding: 10px 0;
       border-radius: 5px;
+      font-family: 'Proxima Nova Semi', sans-serif;
 
       &:first-child{
         margin-left: 0;
@@ -2176,4 +2177,30 @@ input, select, textarea{
     color: red;
     text-align: right;
   }
+}
+
+.contact, .faqs{
+  .copyright{
+    p {
+      font-size:10px;
+      margin:0;
+      color: #fff;
+      line-height: 45px;
+      .italic {
+        font-size:10px;
+      }
+    }
+  }
+}
+
+.pages.about{
+  .more-information{
+    a:hover{
+      text-decoration: none;
+    }
+  }
+}
+
+.tw-count{
+  cursor: pointer;
 }
